# spark-mcp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  deny.toml
.github/: dependabot.yml
.github/codeql/: codeql-rust.yml
.github/codeql/actions-workflow-security/: ArtifactPublishedWithoutProvenance.qhelp  ArtifactPublishedWithoutProvenance.ql  ForbiddenPublicWorkflowTrigger.qhelp  ForbiddenPublicWorkflowTrigger.ql  LogExposure.qll  OverbroadWorkflowPermissions.qhelp  OverbroadWorkflowPermissions.ql  ReleasePublisherWithUntrustedInput.qhelp  ReleasePublisherWithUntrustedInput.ql  RepoSecurityInvariantViolation.qhelp  RepoSecurityInvariantViolation.ql  SensitiveWorkflowValueToLog.qhelp  SensitiveWorkflowValueToLog.ql  SensitiveWorkflowValueToVerboseTool.qhelp  SensitiveWorkflowValueToVerboseTool.ql  UnsafeReleasePublishingPath.qhelp  UnsafeReleasePublishingPath.ql  WorkflowSecurity.qll  WriteTokenOnUntrustedTrigger.qhelp  WriteTokenOnUntrustedTrigger.ql  codeql-pack.lock.yml  qlpack.yml
.github/codeql/actions-workflow-security/suites/: actions-workflow-security.qls
.github/workflows/: code-coverage.yml  codeql-query-tests.yml  codeql.yml  dependency-governance.yml  devskim.yml  osv-scanner.yml  rust-validation.yml
corpus/: .spark-mcp-ignore  README.md  SOURCES.md
docs/: GETTING_STARTED.md  SECURITY_MODEL.md  TOOL_GUIDE.md  agent_prompt_template.md  dependency-governance.md  mcp_prompt_example.md  prompt_probe.md  provenance_admission_design.md  spark-reindex-parity-no-go-2026-02-23.md
scripts/: build_ort.sh  dependency_governance_check.sh  ingest_docs.sh  prompt_probe.sh  replay_smoke_test.sh  sync_systemd_dropins.sh
spec/: tool_schema_snapshot.v1.json
src/: admission.rs  auto_reindex.rs  config.rs  lib.rs  llm.rs  main.rs  prompts.rs  provenance.rs  resources.rs  search.rs  server.rs  tools.rs
src/search/: indexing.rs  query.rs  runtime.rs
systemd/user/spark-mcp.service.d/: 20-workspace-rust-mount.conf.in  zz-no-build-on-restart.conf.in  zz-restart-guardrails.conf.in
