[package]
name = "spark-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Streamable HTTP MCP server for grounded SPARK/Ada corpus search."
repository = "https://github.com/sednalabs/spark-mcp"
readme = "README.md"
build = "build.rs"

[dependencies]
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
futures = "0.3.31"
rmcp = { version = "=1.7.0", features = ["server", "transport-streamable-http-server", "macros"] }
rmcp-macros = "=2.0.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { version = "0.3.37", features = ["formatting", "parsing"] }
ignore = "0.4.22"
html2text = "0.12.5"
tantivy = "0.26.1"
schemars = "1.2.0"
bincode = "1.3.3"
fastembed = { version = "5", default-features = false, features = ["ort-load-dynamic", "hf-hub-native-tls"] }
hnsw_rs = "0.3.3"
url = "2.5.4"

mcp-toolkit-docs = { version = "0.1.0", git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "63558b9716bf1acf2bf1c85cd4c07445d0782e89", package = "mcp-toolkit-docs" }
mcp-toolkit-auth = { version = "0.1.0", git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "63558b9716bf1acf2bf1c85cd4c07445d0782e89", package = "mcp-toolkit-auth" }
mcp-toolkit-core = { version = "0.1.0", git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "63558b9716bf1acf2bf1c85cd4c07445d0782e89", package = "mcp-toolkit-core" }
mcp-toolkit-http = { version = "0.1.0", git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "63558b9716bf1acf2bf1c85cd4c07445d0782e89", package = "mcp-toolkit-http", features = ["session", "session-sqlite"] }
mcp-toolkit-observability = { version = "0.1.0", git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "63558b9716bf1acf2bf1c85cd4c07445d0782e89", package = "mcp-toolkit-observability" }

[dev-dependencies]
mcp-toolkit-testing = { version = "0.1.0", git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "63558b9716bf1acf2bf1c85cd4c07445d0782e89", package = "mcp-toolkit-testing" }
